overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,7 @@ p {
   }
   body {
     padding: 0 1.2rem;
+    overflow-x: hidden;
   }
 }
 @media screen and (max-width:976px) {
