--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -31,4 +31,7 @@
         display: flex;
         flex-direction: column;
     }
+    .portfolios-container .portfolio-item {
+        margin-bottom: 1rem;
+    }
 }
